{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Game",
            "id": "540060d0-97e4-40f5-8b6b-10b7cb47844c",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "18197dc2-439a-4dc6-905a-c94af197c7f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraSpeed",
                    "type": "Value",
                    "id": "8fc5d387-8abd-4114-8e40-7700abc779ba",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "caca950d-6da1-4e06-bf3f-d95987645d6c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClickOnScreen",
                    "type": "Value",
                    "id": "7c61646e-2543-4c08-b2ca-ac2a6032e50b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "7f998125-84da-4ea6-bf9c-515f438595d1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5b4a2d7b-1e8c-43a6-aa9f-51ccda939a62",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ae9bfa1c-598c-412b-9ae5-4436cb8b0594",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1637ed0b-57c0-400b-802e-dae6b258e69d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6e61de2c-3f76-402a-8a3d-c0ccbc223995",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "6c94e72a-37de-4dca-b3a9-05db5831fb56",
                    "path": "1DAxis(minValue=0.5,maxValue=1.5)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSpeed",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b1a05328-e659-47a4-a55e-353398b9728a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "684beb7d-754b-4a1f-9400-e44fb8769e5f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraSpeed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "949940d9-ae54-4998-b4df-d13c099efbd5",
                    "path": "1DAxis(minValue=1,maxValue=5)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4f6574a3-5327-499f-a1a5-4359bcc630be",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8f1f68c2-fb58-4002-a661-dbe946661f08",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "31f5bdea-bea3-421c-a66d-154efc936a12",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "c608a7a7-0ea2-4219-93ae-5a31f92f392b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnScreen",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f92a88ae-7505-40c7-8c7e-5fd22d620b99",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "1040cb2d-7229-4ab8-b451-7ea35aa93d84",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}